// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateDeck — golden master > produces a stable deck for the base (no-theme) mono-G context 1`] = `
{
  "categories": {
    "boardWipes": [],
    "cardDraw": [],
    "creatures": [
      "Creature_1",
      "Creature_10",
      "Creature_11",
      "Creature_12",
      "Creature_13",
      "Creature_14",
      "Creature_15",
      "Creature_16",
      "Creature_17",
      "Creature_18",
      "Creature_19",
      "Creature_2",
      "Creature_20",
      "Creature_21",
      "Creature_22",
      "Creature_23",
      "Creature_24",
      "Creature_25",
      "Creature_26",
      "Creature_27",
      "Creature_28",
      "Creature_29",
      "Creature_3",
      "Creature_30",
      "Creature_4",
      "Creature_5",
      "Creature_6",
      "Creature_7",
      "Creature_8",
      "Creature_9",
    ],
    "lands": [
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Utility Land 1",
      "Utility Land 10",
      "Utility Land 11",
      "Utility Land 12",
      "Utility Land 13",
      "Utility Land 14",
      "Utility Land 15",
      "Utility Land 16",
      "Utility Land 17",
      "Utility Land 18",
      "Utility Land 19",
      "Utility Land 2",
      "Utility Land 20",
      "Utility Land 21",
      "Utility Land 22",
      "Utility Land 23",
      "Utility Land 24",
      "Utility Land 25",
      "Utility Land 3",
      "Utility Land 4",
      "Utility Land 5",
      "Utility Land 6",
      "Utility Land 7",
      "Utility Land 8",
      "Utility Land 9",
    ],
    "ramp": [],
    "singleRemoval": [],
    "synergy": [
      "Artifact_1",
      "Artifact_2",
      "Artifact_3",
      "Artifact_4",
      "Artifact_5",
      "Artifact_6",
      "Artifact_7",
      "Artifact_8",
      "Enchantment_1",
      "Enchantment_2",
      "Enchantment_3",
      "Enchantment_4",
      "Enchantment_5",
      "Enchantment_6",
      "Instant_1",
      "Instant_2",
      "Instant_3",
      "Instant_4",
      "Instant_5",
      "Instant_6",
      "Instant_7",
      "Instant_8",
      "Planeswalker_3",
      "Sorcery_1",
      "Sorcery_2",
      "Sorcery_3",
      "Sorcery_4",
      "Sorcery_5",
      "Sorcery_6",
      "Sorcery_7",
    ],
    "utility": [
      "Planeswalker_1",
      "Planeswalker_2",
    ],
  },
  "commander": "Test Commander",
  "dataSource": "base",
  "manaCurve": {
    "1": 10,
    "2": 14,
    "3": 14,
    "4": 11,
    "5": 8,
    "6": 5,
  },
  "totalCards": 99,
  "typeDistribution": {
    "Artifact": 8,
    "Creature": 30,
    "Enchantment": 6,
    "Instant": 8,
    "Land": 37,
    "Planeswalker": 3,
    "Sorcery": 7,
  },
}
`;

exports[`generateDeck — golden master > snapshots a Tiny-Leaders (CMC<=3, 49-card) variant 1`] = `
{
  "categories": {
    "boardWipes": [],
    "cardDraw": [],
    "creatures": [
      "Creature_1",
      "Creature_13",
      "Creature_14",
      "Creature_15",
      "Creature_19",
      "Creature_2",
      "Creature_20",
      "Creature_21",
      "Creature_25",
      "Creature_26",
      "Creature_27",
      "Creature_3",
      "Creature_31",
      "Creature_32",
      "Creature_33",
      "Creature_37",
      "Creature_38",
      "Creature_39",
      "Creature_7",
      "Creature_8",
      "Creature_9",
    ],
    "lands": [
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Forest",
      "Utility Land 1",
      "Utility Land 10",
      "Utility Land 11",
      "Utility Land 12",
      "Utility Land 13",
      "Utility Land 14",
      "Utility Land 15",
      "Utility Land 16",
      "Utility Land 17",
      "Utility Land 18",
      "Utility Land 19",
      "Utility Land 2",
      "Utility Land 20",
      "Utility Land 21",
      "Utility Land 22",
      "Utility Land 23",
      "Utility Land 24",
      "Utility Land 25",
      "Utility Land 3",
      "Utility Land 4",
      "Utility Land 5",
      "Utility Land 6",
      "Utility Land 7",
      "Utility Land 8",
      "Utility Land 9",
    ],
    "ramp": [],
    "singleRemoval": [],
    "synergy": [
      "Artifact_1",
      "Artifact_10",
      "Artifact_11",
      "Artifact_2",
      "Artifact_3",
      "Artifact_4",
      "Artifact_5",
      "Artifact_6",
      "Artifact_7",
      "Artifact_8",
      "Artifact_9",
      "Enchantment_1",
      "Enchantment_10",
      "Enchantment_2",
      "Enchantment_5",
      "Enchantment_6",
      "Enchantment_9",
      "Forest",
      "Forest",
      "Instant_1",
      "Instant_10",
      "Instant_11",
      "Instant_2",
      "Instant_3",
      "Instant_5",
      "Instant_6",
      "Instant_7",
      "Instant_9",
      "Sorcery_1",
      "Sorcery_10",
      "Sorcery_13",
      "Sorcery_2",
      "Sorcery_5",
      "Sorcery_6",
      "Sorcery_9",
    ],
    "utility": [
      "Planeswalker_1",
    ],
  },
  "commander": "Test Commander",
  "dataSource": "base",
  "manaCurve": {
    "1": 14,
    "2": 21,
    "3": 20,
  },
  "totalCards": 99,
  "typeDistribution": {
    "Artifact": 11,
    "Creature": 21,
    "Enchantment": 6,
    "Instant": 9,
    "Land": 44,
    "Planeswalker": 1,
    "Sorcery": 7,
  },
}
`;
